# herdr-fusion

./: .gitignore  AGENTS.md  DESIGN.md  LICENSE  README.md  fusion.example.toml  fusion.toml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/fusion/: SKILL.md
skills/opinion/: SKILL.md
src/herdr_fusion/: cli.py  harness.py
src/herdr_fusion/prompts/: default_instruction.md  listen.md  merge.md  opinion.md  worker.md
tests/: test_core.py
