[project]
name = "herdr-fusion"
version = "0.1.0"
description = "Fan one prompt out to multiple subscription CLI agents in side-by-side herdr panes, then converge them into one fused answer."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Noah Calibuso" }]
dependencies = []

[project.scripts]
herdr-fusion = "herdr_fusion.cli:main"

[project.urls]
Homepage = "https://github.com/noahcalibuso/herdr-fusion"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/herdr_fusion"]

[dependency-groups]
dev = ["pytest>=8"]
